--- a/index.html
+++ b/index.html
@@ -1,71 +1,100 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="sv">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
-  <link rel="icon" type="image/png" href="./favicon.png">
-  <title>Leaflet Storymaps with Google Sheets Template</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>STADENS POESI - en vandring till åtta dikter av STIG SJÖDIN</title>
+  https://fonts.googleapis.com/css?family=Libre+Baskerville
+  https://unpkg.com/leaflet/dist/leaflet.css
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
-  <!-- Load Leaflet CSS and JS-->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    #map {
+      height: 100%;
+      width: 100%;
+    }
 
-  <!-- Load Leaflet basemap providers -->
-  <script src="https://unpkg.com/leaflet-providers@2.0.0/leaflet-providers.js"></script>
+    h2 {
+      font-family: 'Libre Baskerville', serif;
+      font-size: 1.5rem;
+      margin: 0.5em 0;
+    }
 
-  <!-- Load jQuery  -->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    p {
+      font-size: 0.9rem;
+    }
 
-  <!-- Load PapaParse -->
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
+    .poem {
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.4s ease;
+    }
 
-  <!-- Load Lightbox -->
-  <script src="scripts/lightbox/js/lightbox.js"></script>
-  <link rel="stylesheet" href="scripts/lightbox/css/lightbox.css" />
-
-  <!-- Load Font-Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <link rel="stylesheet" href="markers/leaflet.extra-markers.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/style-desktop.css">
-  <link rel="stylesheet" href="css/loader.css">
+    .toggle-poem {
+      display: inline-block;
+      margin-top: 0.5em;
+      color: #0077cc;
+      cursor: pointer;
+      text-decoration: underline;
+    }
+  </style>
 </head>
-
 <body>
-
-  <div id="title">
-    <div id="logo"></div>
-    <div id="header"></div>
-  </div>
-
-  <div id="narration">
-    <div id="contents">
-      <div id="top"></div>
-    </div>
-  </div>
-
-  <div class="loader">Loading...</div>
   <div id="map"></div>
 
-  <script type="text/javascript">
-    // Create the Leaflet map with a generic start point
-    var map = L.map('map', {
-      center: [0, 0],
-      zoom: 1,
-      scrollWheelZoom: false,
-      zoomControl: false,
-      tap: false
+  https://unpkg.com/leaflet/dist/leaflet.js</script>
+  <script>
+    const map = L.map('map').setView([60.6189135, 16.7788006], 15);
+
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+
+    const markers = [/* Insert your marker data here — same as in your original code */];
+
+    markers.forEach(m => {
+      const popupContent = `
+        <div>
+          <h2>${m.title}</h2>
+          <p>${m.description}</p>
+          #Läs dikten</a>
+          <div class="poem">
+            <p style="white-space: pre-wrap;">${m.poem}</p>
+          </div>
+        </div>
+      `;
+
+      const marker = L.circleMarker([m.lat, m.lng], {
+        radius: 10,
+        fillColor: "red",
+        color: "black",
+        weight: 1,
+        opacity: 1,
+        fillOpacity: 1
+      }).addTo(map);
+
+      marker.bindPopup(popupContent);
+    });
+
+    document.addEventListener("click", (e) => {
+      if (e.target.matches(".toggle-poem")) {
+        e.preventDefault();
+        const poemDiv = e.target.nextElementSibling;
+        const isOpen = poemDiv.style.maxHeight && poemDiv.style.maxHeight !== "0px";
+
+        if (isOpen) {
+          poemDiv.style.maxHeight = "0px";
+          e.target.textContent = "Läs dikten";
+        } else {
+          poemDiv.style.maxHeight = poemDiv.scrollHeight + "px";
+          e.target.textContent = "Dölj dikten";
+        }
+      }
     });
   </script>
-
-  <script type="text/javascript" src="google-doc-url.js"></script>
-  <script type="text/javascript" src="markers/leaflet.extra-markers.min.js"></script>
-  <script type="text/javascript" src="scripts/constants.js"></script>
-  <script type="text/javascript" src="scripts/jquery.csv.js"></script>
-  <script type="text/javascript" src="scripts/storymap.js"></script>
-
 </body>
 </html>
