--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <title>STADENS POESI - en vandring till åtta dikter av Stig Sjödin</title>
 
   <!-- Load Leaflet CSS and JS-->
+  
+ <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet'>
+
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
